fix(css): Fix latest changes UI overlapping in Insights (#12252)
* Fix latest changes UI overlapping in Insights

* Move actions tooltip in History to top right corner

Instead of showing them ontop of the avatar on mobile. They are moved into the right top corner.

* Update the actions tooltip in Comments to match the one in History

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -612,6 +612,17 @@ form + .login-label {
   margin-top: 55px;
 }
 
+#changes-table {
+  margin-top: 40px;
+  width: 100%;
+}
+
+#changes-list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .btn-float {
   display: flex;
   gap: 5px;
@@ -627,7 +638,33 @@ form + .login-label {
 
 @media only screen and (max-width: 600px) {
   .btn-float {
-    left: 20px;
+    box-shadow: none;
+    transform: none;
+  }
+
+  #comments #comment-section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #changes-table {
+    margin-top: 20px;
+  }
+
+  #changes-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  #changes-item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #changes-item .full-cell {
+    border-top: none;
   }
 }
 
